@@ -2,7 +2,6 @@ package ru.practicum.shareit.booking;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import ru.practicum.shareit.booking.model.Booking;
 import ru.practicum.shareit.booking.model.BookingStatus;
 import ru.practicum.shareit.exception.NotFoundException;
@@ -14,163 +13,153 @@ import ru.practicum.shareit.user.model.User;
 
 import java.time.LocalDateTime;
 import java.util.Collection;
-import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Objects;
 
-@Service
 @RequiredArgsConstructor
-@Transactional(readOnly = true)
+@Service
 public class BookingServiceImpl implements BookingService {
-
     private final BookingRepository bookingRepository;
-
     private final UserRepository userRepository;
-
     private final ItemRepository itemRepository;
 
     @Override
-    @Transactional
     public BookingDto create(Long userId, BookingRequestDto bookingRequestDto) {
-        User booker = userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("Пользователь не найден"));
-
+        validate(userId, bookingRequestDto);
         Item item = itemRepository.findById(bookingRequestDto.getItemId())
-                .orElseThrow(() -> new NotFoundException("Вещь не найдена"));
-
-        if (item.getOwner() != null && item.getOwner().getId().equals(userId)) {
-            throw new NotFoundException("Нельзя бронировать свою вещь");
-        }
-
-        if (!Boolean.TRUE.equals(item.getAvailable())) {
-            throw new NotFoundException("Вещь недоступна для бронирования");
-        }
-
-        LocalDateTime start = bookingRequestDto.getStart();
-        LocalDateTime end = bookingRequestDto.getEnd();
-
-        if (start == null || end == null) {
-            throw new ValidationException("Дата начала и окончания обязательны");
-        }
-
-        if (!start.isBefore(end)) {
-            throw new ValidationException("Дата окончания должна быть после даты начала");
-        }
-
-        if (start.isBefore(LocalDateTime.now())) {
-            throw new ValidationException("Дата начала должна быть в будущем");
-        }
-
-        Booking booking = BookingMapper.toBooking(bookingRequestDto, item, booker);
-        return BookingMapper.toBookingDto(bookingRepository.save(booking));
+                .orElseThrow(() -> new NotFoundException("ItemId = " + bookingRequestDto.getItemId() + " not found!"));
+        User booker = userRepository.findById(userId)
+                .orElseThrow(() -> new NotFoundException("User id = " + userId + " not found!"));
+        return BookingMapper.toBookingDto(bookingRepository.save(
+                Booking.builder()
+                        .start(bookingRequestDto.getStart())
+                        .end(bookingRequestDto.getEnd())
+                        .item(item)
+                        .booker(booker)
+                        .status(BookingStatus.WAITING)
+                        .build()
+        ));
     }
 
     @Override
-    @Transactional
     public BookingDto setApproved(Long userId, Long bookingId, Boolean approved) {
-        User owner = userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("User id = " + userId + " not found!"));
-
         Booking booking = bookingRepository.findById(bookingId)
                 .orElseThrow(() -> new NotFoundException("Booking id = " + bookingId + " not found!"));
-
-        if (booking.getItem() == null || booking.getItem().getOwner() == null
-                || !booking.getItem().getOwner().getId().equals(owner.getId())) {
-            throw new NotFoundException("Only item owner can approve booking!");
+        if (!userRepository.existsById(userId)) {
+            throw new RuntimeException("setApproved: User id = " + userId + " not found!");
         }
 
-        if (booking.getStatus() == BookingStatus.APPROVED && Boolean.TRUE.equals(approved)) {
-            throw new ValidationException("Booking is already approved!");
+        if (!booking.getItem().getOwner().getId().equals(userId)) {
+            throw new NotFoundException("Only owner can set approved!");
         }
-
-        if (booking.getStatus() == BookingStatus.REJECTED && !Boolean.TRUE.equals(approved)) {
-            throw new ValidationException("Booking is already rejected!");
+        if (booking.getStatus().equals(BookingStatus.APPROVED)) {
+            throw new ValidationException("Status is APPROVED!");
         }
-
-        booking.setStatus(Boolean.TRUE.equals(approved) ? BookingStatus.APPROVED : BookingStatus.REJECTED);
-        return BookingMapper.toBookingDto(bookingRepository.save(booking));
+        if (approved) {
+            booking.setStatus(BookingStatus.APPROVED);
+        } else {
+            booking.setStatus(BookingStatus.REJECTED);
+        }
+        bookingRepository.save(booking);
+        return BookingMapper.toBookingDto(booking);
     }
 
     @Override
     public BookingDto findById(Long bookingId, Long userId) {
         Booking booking = bookingRepository.findById(bookingId)
                 .orElseThrow(() -> new NotFoundException("Booking id = " + bookingId + " not found!"));
-
-        boolean isBooker = booking.getBooker() != null && booking.getBooker().getId().equals(userId);
-        boolean isOwner = booking.getItem() != null && booking.getItem().getOwner() != null
-                && booking.getItem().getOwner().getId().equals(userId);
-
-        if (!isBooker && !isOwner) {
-            throw new NotFoundException("Access denied!");
+        if (!booking.getBooker().getId().equals(userId) && !booking.getItem().getOwner().getId().equals(userId)) {
+            throw new NotFoundException("Only owner or booker can get Booking!");
         }
-
+        if (!userRepository.existsById(userId)) {
+            throw new RuntimeException("User id = " + userId + " not found!");
+        }
         return BookingMapper.toBookingDto(booking);
     }
 
     @Override
     public Collection<BookingDto> findAllByBookerAndStatus(Long userId, String state) {
-        userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("User id = " + userId + " not found!"));
-
-        List<Booking> bookings;
-
-        if ("ALL".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByBookerIdOrderByStartDesc(userId);
-        } else if ("CURRENT".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByBookerIdOrderByStartDesc(userId).stream()
-                    .filter(b -> !b.getStart().isAfter(LocalDateTime.now()) && !b.getEnd().isBefore(LocalDateTime.now()))
-                    .collect(Collectors.toList());
-        } else if ("PAST".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByBookerIdOrderByStartDesc(userId).stream()
-                    .filter(b -> b.getEnd().isBefore(LocalDateTime.now()))
-                    .collect(Collectors.toList());
-        } else if ("FUTURE".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByBookerIdOrderByStartDesc(userId).stream()
-                    .filter(b -> b.getStart().isAfter(LocalDateTime.now()))
-                    .collect(Collectors.toList());
-        } else if ("WAITING".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByBookerIdAndStatusOrderByStartDesc(userId, BookingStatus.WAITING);
-        } else if ("REJECTED".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByBookerIdAndStatusOrderByStartDesc(userId, BookingStatus.REJECTED);
-        } else {
-            throw new ValidationException("Unknown state: " + state);
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("User id = " + userId + " not found!");
         }
 
-        return bookings.stream()
-                .map(BookingMapper::toBookingDto)
-                .collect(Collectors.toList());
+        String normalizedState = state.toUpperCase();
+
+        return switch (normalizedState) {
+            case "ALL" -> bookingRepository.findAllByBookerIdOrderByStartDesc(userId).stream()
+                    .map(BookingMapper::toBookingDto)
+                    .toList();
+            case "CURRENT" -> bookingRepository
+                    .findAllByBookerIdAndStartBeforeAndEndAfterOrderByStartDesc(userId, LocalDateTime.now(), LocalDateTime.now())
+                    .stream().map(BookingMapper::toBookingDto).toList();
+            case "PAST" -> bookingRepository.findAllByBookerIdAndEndBeforeOrderByStartDesc(userId, LocalDateTime.now())
+                    .stream().map(BookingMapper::toBookingDto).toList();
+            case "FUTURE" -> bookingRepository.findAllByBookerIdAndStartAfterOrderByStartDesc(userId, LocalDateTime.now())
+                    .stream().map(BookingMapper::toBookingDto).toList();
+            case "WAITING", "REJECTED" -> bookingRepository.findAllByBookerIdAndStatusOrderByStartDesc(userId, BookingStatus.valueOf(normalizedState))
+                    .stream().map(BookingMapper::toBookingDto).toList();
+            default -> throw new RuntimeException("Unknown state: " + state);
+        };
     }
 
     @Override
     public Collection<BookingDto> findAllByOwnerAndStatus(Long userId, String state) {
-        userRepository.findById(userId)
-                .orElseThrow(() -> new NotFoundException("User id = " + userId + " not found!"));
-
-        List<Booking> bookings;
-
-        if ("ALL".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByItemOwnerIdOrderByStartDesc(userId);
-        } else if ("CURRENT".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByItemOwnerIdOrderByStartDesc(userId).stream()
-                    .filter(b -> !b.getStart().isAfter(LocalDateTime.now()) && !b.getEnd().isBefore(LocalDateTime.now()))
-                    .collect(Collectors.toList());
-        } else if ("PAST".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByItemOwnerIdOrderByStartDesc(userId).stream()
-                    .filter(b -> b.getEnd().isBefore(LocalDateTime.now()))
-                    .collect(Collectors.toList());
-        } else if ("FUTURE".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByItemOwnerIdOrderByStartDesc(userId).stream()
-                    .filter(b -> b.getStart().isAfter(LocalDateTime.now()))
-                    .collect(Collectors.toList());
-        } else if ("WAITING".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByItemOwnerIdAndStatusOrderByStartDesc(userId, BookingStatus.WAITING);
-        } else if ("REJECTED".equalsIgnoreCase(state)) {
-            bookings = bookingRepository.findAllByItemOwnerIdAndStatusOrderByStartDesc(userId, BookingStatus.REJECTED);
-        } else {
-            throw new ValidationException("Unknown state: " + state);
+        if (!userRepository.existsById(userId)) {
+            throw new NotFoundException("User id = " + userId + " not found!");
         }
 
-        return bookings.stream()
-                .map(BookingMapper::toBookingDto)
-                .collect(Collectors.toList());
+        String normalizedState = state.toUpperCase();
+
+        return switch (normalizedState) {
+            case "ALL" -> bookingRepository.findAllByItemOwnerIdOrderByStartDesc(userId).stream()
+                    .map(BookingMapper::toBookingDto)
+                    .toList();
+            case "CURRENT" -> bookingRepository
+                    .findAllByItemOwnerIdAndStartBeforeAndEndAfterOrderByStartDesc(userId, LocalDateTime.now(), LocalDateTime.now())
+                    .stream().map(BookingMapper::toBookingDto).toList();
+            case "PAST" -> bookingRepository.findAllByItemOwnerIdAndEndBeforeOrderByStartDesc(userId, LocalDateTime.now())
+                    .stream().map(BookingMapper::toBookingDto).toList();
+            case "FUTURE" -> bookingRepository.findAllByItemOwnerIdAndStartAfterOrderByStartDesc(userId, LocalDateTime.now())
+                    .stream().map(BookingMapper::toBookingDto).toList();
+            case "WAITING", "REJECTED" -> bookingRepository.findAllByItemOwnerIdAndStatusOrderByStartDesc(userId, BookingStatus.valueOf(normalizedState))
+                    .stream().map(BookingMapper::toBookingDto).toList();
+            default -> throw new RuntimeException("Unknown state: " + state);
+        };
+    }
+
+    private void validate(Long userId, BookingRequestDto bookingRequestDto) {
+        if (bookingRequestDto.getEnd().isBefore(LocalDateTime.now())) {
+            throw new ValidationException("End date before now!");
+        }
+        if (bookingRequestDto.getStart().isBefore(LocalDateTime.now())) {
+            throw new ValidationException("Start date before now!");
+        }
+        if (bookingRequestDto.getEnd().isBefore(bookingRequestDto.getStart())) {
+            throw new ValidationException("End date before Start date!");
+        }
+        if (bookingRequestDto.getEnd().equals(bookingRequestDto.getStart())) {
+            throw new ValidationException("End date equals Start date!");
+        }
+        Item item = itemRepository.findById(bookingRequestDto.getItemId()).orElseThrow(
+                () -> new NotFoundException("Validation: Item id = " + bookingRequestDto.getItemId() + " not found!"));
+        if (Objects.equals(item.getOwner().getId(), userId)) {
+            throw new NotFoundException("Item is already booked!");
+        }
+        if (Boolean.FALSE.equals(item.getAvailable())) {
+            throw new RuntimeException("Available is not true!");
+        }
+        if (bookingRepository.findAllByItemId(item.getId()).stream()
+                .anyMatch(booking -> (booking.getStart().isAfter(bookingRequestDto.getStart())
+                        && booking.getStart().isBefore(bookingRequestDto.getEnd()))
+                        || (booking.getEnd().isAfter(bookingRequestDto.getStart())
+                        && booking.getEnd().isBefore(bookingRequestDto.getEnd())))) {
+            throw new ValidationException("Crossing dates!");
+        }
+    }
+
+    private BookingStatus parseState(String state) {
+        if (state == null || state.isBlank() || state.equalsIgnoreCase("all")) {
+            return null;
+        }
+        return BookingStatus.valueOf(state.toUpperCase());
     }
 }
